# gRPC_Demo

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
src/: CMakeLists.txt  client.cpp  server.cpp
src/proto/: CMakeLists.txt  demo.proto
